Fixed bug of scrollbar being visible

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -142,6 +142,14 @@
     }
 }
 
+html{
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+    ::-webkit-scrollbar {
+        display: none;
+}
+
 @keyframes loop-move {
     0% {
     transform: rotate(0deg) translateY(0);
